force-app/main/default/objects/Possession_Reconciliation_Log__c/Possession_Reconciliation_Log__c.object-meta.xml
<CustomObject>
    <label>Possession Reconciliation Log</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Possession Reconciliation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possession Reconciliation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>