force-app/main/default/objects/Possession_Reconciliation_Log__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Possession Reconciliation Logs</relationshipLabel>
    <relationshipName>Possession_Reconciliation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>