force-app/main/default/objects/Possession_Reconciliation_Log__c/fields/Possession_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Possession_Reconciliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possession Reconciliation</label>
    <referenceTo>Possession_Reconciliation__c</referenceTo>
    <relationshipLabel>Possession Reconciliation Logs</relationshipLabel>
    <relationshipName>Possession_Reconciliation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>