force-app/main/default/objects/Possession_Reconciliation_Log__c/fields/Schedule_Running_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Running_Date__c</fullName>
    <label>Schedule Running Date</label>
    <type>Date</type>
</CustomField>